--- a/Pootle/templates/login.html
+++ b/Pootle/templates/login.html
@@ -11,9 +11,18 @@ import navbar, pootlepage
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" type="text/css" href="${baseurl}pootle.css" />
   <link rel="shortcut icon" href="${baseurl}favicon.ico" />
+  <script src="${baseurl}js/jquery/jquery.js" type="text/javascript"></script>
   <!--[if lt IE 7.]>
     <script defer type="text/javascript" src="${baseurl}js/correctpng.js"></script>
   <![endif]-->
+  <script>
+    $(document).ready(function () {
+      // Set focus to login form
+      if (document.loginform) {
+          document.loginform.username.focus();
+      }
+    });
+  </script>
 </head>
 
 <body bgcolor="#FFFFFF">
